Updates to basics on website

--- a/index.html
+++ b/index.html
@@ -26,22 +26,108 @@
           alt="SheCodes small logo"
         />
         <ul>
-          <li>
+          <li class="active">
             <a href="/" title="homepage-link">Home</a>
           </li>
           <li>
-            <a href="/about-me.html" title="about-page link">About</a>
+            <a href="/about.html" title="about-page link">About</a>
           </li>
           <li>
-            <a href="/work.html" title="work-page link">Work</a>
+            <a href="/magical-shop.html" title="work-page link">Magic Shop</a>
           </li>
-          <li class="active">
+          <li>
             <a href="/contact.html" title="contact-page link">Contact</a>
           </li>
         </ul>
       </nav>
     </div>
-
-    <h1>The Cambridge Gift Shop</h1>
+    <div class="home-body">
+      <h1>The Cambridge Gift Shop</h1>
+      <div>
+        A great shop for all your cambridge gifting needs This should be a
+        summary of the shop, <br />
+        the highlights you want to get through to customers straight away
+      </div>
+      <br />
+      <img src="/images/shop_image.jpeg" class="homepage_img" />
+      <br />
+      <h2>Tourist attractions we offer</h2>
+      <h3>
+        We offer a range of tourist tickets for the exciting city of cambridge!
+      </h3>
+      <ul class="list_of_services">
+        <li class="service_offered">
+          <h3>Punting tickets</h3>
+          <div>
+            Why not check out cambridge in the famous punting boats! Pop into
+            the shop to grab some great priced tickets.
+          </div>
+        </li>
+        <li class="service_offered">
+          <h3>Walking tours</h3>
+          <div>
+            Hear about the history of cambridge in a small group walking tour,
+            we have a few options for walking tours, and the tour starts from
+            right outside the stop!
+          </div>
+        </li>
+        <li class="service_offered">
+          <h3>Other attraction</h3>
+          <div>
+            Hear about the history of cambridge in a small group walking tour,
+            we have a few options for walking tours, and the tour starts from
+            right outside the stop!
+          </div>
+        </li>
+      </ul>
+    </div>
+    <footer>
+      <a class="footer-email" href="mailto:bethjones543@gmail.com"
+        >placementemail@gmail.com</a
+      >
+      <br />
+      <br />
+      <ul>
+        <li>
+          <a
+            class="social-icons"
+            href="https://www.facebook.com/beth.anderson.39545/"
+            title="link to facebook"
+            ><img
+              src="/images/fb-icon.png"
+              class="img-fluid"
+              alt="Facebook icon"
+          /></a>
+        </li>
+        <li>
+          <a
+            class="social-icons"
+            href="https://www.instagram.com/b.ethjones/"
+            title="link to instagram"
+            ><img
+              src="/images/instagram-icon.png"
+              class="img-fluid"
+              alt="Instagram icon"
+          /></a>
+        </li>
+        <li>
+          <a
+            class="social-icons"
+            href="https://www.twitter.com"
+            title="link to twitter"
+            ><img
+              src="/images/twitter-icon.png"
+              class="img-fluid"
+              alt="twitter icon"
+          /></a>
+        </li>
+      </ul>
+      <a
+        class="coded-link"
+        href="https://github.com/btj43/Beth-Jones-Portfolio"
+        title="Link to github repository"
+        >Coded by Beth Jones</a
+      >
+    </footer>
   </body>
 </html>
