--- a/magical-shop.html
+++ b/magical-shop.html
@@ -13,11 +13,89 @@
     <title>The Department of Magical Gifts</title>
   </head>
   <body>
-    <h1>The Department of Magical Gifts</h1>
-    <h3>
-      This is a page to discuss and showcase the harry potter and magical shop
-    </h3>
-    <div>Location</div>
-    <div>Separate contact details</div>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <img
+          class="logo"
+          src="/images/logosheCodes_logo.png"
+          alt="SheCodes logo"
+        />
+        <img
+          class="logo-small"
+          src="/images/logo_small.png"
+          alt="SheCodes small logo"
+        />
+        <ul>
+          <li>
+            <a href="/" title="homepage-link">Home</a>
+          </li>
+          <li>
+            <a href="/about.html" title="about-page link">About</a>
+          </li>
+          <li class="active">
+            <a href="/magical-shop.html" title="work-page link">Magic Shop</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="contact-page link">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="home-body">
+      <h1>The Department of Magical Gifts</h1>
+      <h3>
+        This is a page to discuss and showcase the harry potter and magical shop
+      </h3>
+      <div>Location</div>
+      <div>Separate contact details</div>
+    </div>
+    <footer>
+      <a class="footer-email" href="mailto:bethjones543@gmail.com"
+        >placementemail@gmail.com</a
+      >
+      <br />
+      <br />
+      <ul>
+        <li>
+          <a
+            class="social-icons"
+            href="https://www.facebook.com/beth.anderson.39545/"
+            title="link to facebook"
+            ><img
+              src="/images/fb-icon.png"
+              class="img-fluid"
+              alt="Facebook icon"
+          /></a>
+        </li>
+        <li>
+          <a
+            class="social-icons"
+            href="https://www.instagram.com/b.ethjones/"
+            title="link to instagram"
+            ><img
+              src="/images/instagram-icon.png"
+              class="img-fluid"
+              alt="Instagram icon"
+          /></a>
+        </li>
+        <li>
+          <a
+            class="social-icons"
+            href="https://www.twitter.com"
+            title="link to twitter"
+            ><img
+              src="/images/twitter-icon.png"
+              class="img-fluid"
+              alt="twitter icon"
+          /></a>
+        </li>
+      </ul>
+      <a
+        class="coded-link"
+        href="https://github.com/btj43/Beth-Jones-Portfolio"
+        title="Link to github repository"
+        >Coded by Beth Jones</a
+      >
+    </footer>
   </body>
 </html>
